--- a/test.html
+++ b/test.html
@@ -73,24 +73,26 @@
             background: #45a049;
         }
             /* Стиль для кнопки "Назад" */
-.back-button {
-  display: inline-block;
-  padding: 8px 16px;
-  margin-top: 10px;
-  background: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-radius:45px;
-  cursor:pointer;
+ .back-button {
+            display: inline-block;
+            padding: 8px 16px;
+            margin-top: 10px;
+            background: rgba(255, 255, 255, 0.5);
+            border: none;
+            border-radius:45px;
+            cursor:pointer;
+            color: black; /* Цвет текста кнопки "Назад" */
+            align-self: flex-start; /* Выравнивание по левому краю */
 }
 .back-button:hover {
-  background-color:#bbb;
+  background-color : rgba(144,128,208,1);
 }
         #result-container {
             display: none;
             background: white;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
         .result-score {
             font-size: 24px;
