--- a/test.html
+++ b/test.html
@@ -82,7 +82,8 @@
             border-radius:45px;
             cursor:pointer;
             color: black; /* Цвет текста кнопки "Назад" */
-            align-self: flex-start; /* Выравнивание по левому краю */
+         align-self: flex-start; /* Это выравнивает кнопку по левому краю */
+    margin-left: 0; /* Убираем стандартный отступ слева */
 }
 .back-button:hover {
   background-color : rgba(144,128,208,1);
