--- a/test.html
+++ b/test.html
@@ -85,8 +85,6 @@ ChatGPT4 | Midjourney, [27.05.2025 0:18]
             width: 100%;  /* Занимает всю ширину контейнера */
             display: flex;
             justify-content: flex-start; /* Выравнивание по левому краю */
-
-ChatGPT4 | Midjourney, [27.05.2025 0:18]
             margin-top: 15px; /* Отступ сверху, как между вариантами ответов */
         }
 
@@ -217,8 +215,6 @@ ChatGPT4 | Midjourney, [27.05.2025 0:18]
     <div class="option" onclick="selectAnswer(1,2)">2 - Я все время расстроен и не могу от этого отключиться.</div>
     <div class="option" onclick="selectAnswer(1,3)">3 - Я настолько расстроен и несчастлив, что не могу это выдержать.</div>
     <div class="back-button-wrapper" style='display:none;'>  <!-- Обертка для кнопки "Назад" -->
-
-ChatGPT4 | Midjourney, [27.05.2025 0:18]
 <button class='back-button' onclick='goBack()'>Назад</button>
     </div>
 </div>
@@ -272,9 +268,6 @@ ChatGPT4 | Midjourney, [27.05.2025 0:18]
     <div class="back-button-wrapper" style='display:none;'>  <!-- Обертка для кнопки "Назад" -->
         <button class='back-button' onclick='goBack()'>Назад</button>
     </div>
-<
-
-ChatGPT4 | Midjourney, [27.05.2025 0:18]
 /div>
 <div id="question7" class="question-container">
     <div class="question">7. Я не разочарован в себе.</div>
@@ -328,10 +321,7 @@ ChatGPT4 | Midjourney, [27.05.2025 0:18]
 </div>
 <div id="question12" class="question-container">
     <div class="question">12. Я не утратил интерес к другим людям.</div>
-    <div class='option' onclick= 'selectAnswer(12,0)'>0 - Я не чу
-
-ChatGPT4 | Midjourney, [27.05.2025 0:18]
-вствую себя хуже других.</div>
+    <div class='option' onclick= 'selectAnswer(12,0)'>0 - Я не чувствую себя хуже других.</div>
     <div class='option' onclick= 'selectAnswer(12,1)'>1 - Я критикую себя за свои слабости и ошибки.</div>
     <div class='option' onclick= 'selectAnswer(12,2)'>2 - Я постоянно виню себя за свои ошибки.</div>
     <div class='option' onclick= 'selectAnswer(12,3)'>3 - Я виню себя за все плохое, что происходит.</div>
@@ -438,10 +428,7 @@ ectAnswer(17,1)'>1 - Я критикую себя за свои слабости
     <h2>Результаты теста</h2>
     <div class='result-score'>Ваш результат: <span id='total-score'>0</span> баллов</div>
     <div class='diagnosis' id='diagnosis-text'>Результат</div>
-    <p id='result-description'>Описание р
-
-ChatGPT4 | Midjourney, [27.05.2025 0:18]
-езультата</p>
+    <p id='result-description'>Описание результата</p>
     <button onclick='restartTest()'>Пройти тест снова</button>
 </div>
 
