--- a/test.html
+++ b/test.html
@@ -73,17 +73,17 @@
             background: #45a049;
         }
             /* Стиль для кнопки "Назад" */
- .back-button {
-            display: inline-block;
-            padding: 8px 16px;
-            margin-top: 10px;
-            background: rgba(255, 255, 255, 0.5);
-            border: none;
-            border-radius:45px;
-            cursor:pointer;
-            color: black; /* Цвет текста кнопки "Назад" */
-         align-self: flex-start; /* Это выравнивает кнопку по левому краю */
-    margin-left: 0; /* Убираем стандартный отступ слева */
+/* Кнопка "Назад" */
+.back-button {
+    align-self: flex-start; /* выравниваем по левому краю контейнера */
+    margin-top: 20px; /* отступ сверху */
+    background: rgba(255,255,255,0.5);
+    border-radius: 45px;
+    padding: 8px 16px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 20px; /* немного отступа слева */
 }
 .back-button:hover {
   background-color : rgba(144,128,208,1);
